Fix for bug 164917; download dialog stays open after Save As HTML complete. We didn't set up the flags on the nsIWebBrowserPersist.